--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
+    <div id="content"></div>
 
+    <script>
+        fetch("https://ci-swapi.herokuapp.com/api/api/")
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("content").innerText = data;
+            })
+    </script>
 </body>
 
 </html>
