--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     <div id="content"></div>
 
     <script>
-        fetch("https://ci-swapi.herokuapp.com/api/api/")
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("content").innerText = data;
+        fetch("https://ci-swapi.herokuapp.com/api/")
+            .then(response => response.json())
+            .then(data => displayData(data))
+            .catch((e) => {
+                console.error("Error: ", e)
             })
+
+        function displayData(data) {
+            document.getElementById("content").innerText = data.people;
+        }
     </script>
 </body>
 
